[gd_scene load_steps=9 format=3 uid="uid://b16sbtkodm7ou"]

[ext_resource type="Script" uid="uid://d01kg8wp8rlda" path="res://scripts/mission_card.gd" id="1_tetin"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uwixq"]
bg_color = Color(0.101960786, 0.101960786, 0.18039216, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0.8509804, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxLine" id="StyleBoxLine_yi42f"]
color = Color(0.30588236, 0.8, 0.6392157, 1)
thickness = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dj4el"]
bg_color = Color(0.1764706, 0.1764706, 0.26666668, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1p5qw"]
bg_color = Color(0, 0.8509804, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v733f"]
bg_color = Color(0.30588236, 0.8, 0.6392157, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o6kk4"]
bg_color = Color(0.22745098, 0.60784316, 0.49411765, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qewl8"]
bg_color = Color(0.27058825, 0.7019608, 0.5764706, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="MissionCard" type="PanelContainer"]
custom_minimum_size = Vector2(400, 220)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uwixq")
script = ExtResource("1_tetin")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MissionNameLabel" type="Label" parent="MarginContainer/VBoxContainer/TitleRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.8509804, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Mission Name"

[node name="DifficultyLabel" type="Label" parent="MarginContainer/VBoxContainer/TitleRow"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.41960785, 0.41960785, 1)
theme_override_font_sizes/font_size = 16
text = "Difficulty"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_yi42f")

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Mission Description: "
autowrap_mode = 2

[node name="RewardsRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MoneyRewardLabel" type="Label" parent="MarginContainer/VBoxContainer/RewardsRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 14

[node name="FameRewardLabel" type="Label" parent="MarginContainer/VBoxContainer/RewardsRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 14

[node name="RequirementsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TimerRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TimerLabel" type="Label" parent="MarginContainer/VBoxContainer/TimerRow"]
layout_mode = 2
text = "Mission Timer"

[node name="TimerProgress" type="ProgressBar" parent="MarginContainer/VBoxContainer/TimerRow"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_dj4el")
theme_override_styles/fill = SubResource("StyleBoxFlat_1p5qw")
value = 100.0
show_percentage = false

[node name="AssignedHeroesRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AssignedHeroesLabel" type="Label" parent="MarginContainer/VBoxContainer/AssignedHeroesRow"]
layout_mode = 2

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_v733f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_o6kk4")
theme_override_styles/hover = SubResource("StyleBoxFlat_qewl8")
text = "SELECT MISSION"
